--- a/style.css
+++ b/style.css
@@ -1,77 +1,82 @@
+/* ==== GENERAL STYLES ==== */
+
 * {
   box-sizing: border-box;
 }
+
+/* ==== A FLOATED TOP NAVIGATION ==== */
+
 nav {
-    background-color: rgba(0,0,0,.9);
-    padding: 1rem;
-  }
-  nav a {
-    text-decoration: none;
-    font-family: 'Space Mono', monospace;
-    text-align: center;
-    color: #fff;
-    display: block;
-    padding: .5rem 1rem;
-  }
-  .sign-up {
-    border: 1px solid hsla(0,0%,100%,.2);
-    border-radius: 9999px;
-  }
-  nav a:hover {
+  background-color: rgba(0,0,0,.9);
+  padding: 1rem;
+}
+
+nav a {
+  text-decoration: none;
+  font-family: 'Space Mono', monospace;
+  text-align: center;
+  display: block;
+  padding: .5rem 1rem;
+  color: #fff;
+}
+
+nav a:hover {
   color: hsl(0, 0%, 77%);
   transition: color .15s ease-in-out;
 }
+
+.sign-up {
+  border: 1px solid hsla(0,0%,100%,.2);
+  border-radius: 9999px;
+}
+
 .sign-up:hover {
-    color: #000;
-    background-color: #fff;
-    transition: background-color .15s ease-in-out;
-  }
-  @media (min-width: 768px) {
+  color: #000;
+  background-color: #fff;
+  transition: background-color .15s ease-in-out;
+}
 
-    nav {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-    }
-  
-  }
-  @media (min-width: 768px) {
+@media (min-width: 768px) {
 
-    nav a {
-      float: right;
-    }
-  
-    .home {
-      float: left;
-    }
-  
+  nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
   }
-  @media (min-width: 768px) {
+
+  nav a {
+    float: right;
+  }
+
+  .home {
+    float: left;
+  }
 
     /* Clearfix */
-      nav::after {
+    nav::after {
       content: "";
       clear: both;
       display: block;
     }
-  
+
+}
+
+section {
+  font-size: 1rem;
+  font-family: 'Space Mono', monospace;
+}
+
+@media (min-width: 768px) {
+
+  section {
+    width: 60%;
+    margin: 5.25rem auto 1.25rem;
   }
-  p {
-    font-size: 1rem;
-    font-family: 'Space Mono', monospace;
-  }
-  
-  @media (min-width: 768px) {
-  
-    body {
-      width: 60%;
-      margin: 5.25rem auto 1.25rem;
-    }
-  
-  }
-  
-  p {
-    margin-bottom: 1.25rem;
-    padding: .5rem;
-  }
+
+}
+
+p {
+  margin-bottom: 1.25rem;
+  padding: .5rem;
+}
